height fix on mobile

--- a/client/src/pages/chat/ChatPage.module.css
+++ b/client/src/pages/chat/ChatPage.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     color: #fff;
     box-sizing: border-box;
-    height: 100dvh;
+    height: 100svh;
     display: flex;
     padding: 2rem;
     gap: 2rem;
